# android_adb_tool

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/android_adb_tool_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: android_adb_tool.podspec
lib/: android_adb_tool.dart  android_adb_tool_bindings_generated.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/api/: tool.dart
linux/: CMakeLists.txt
macos/: android_adb_tool.podspec
macos/Classes/: android_adb_tool.c
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: tool.rs
src/: CMakeLists.txt  android_adb_tool.c
windows/: CMakeLists.txt
